--- a/readme.html
+++ b/readme.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-<title>A guide to the Cleaner Gallery plugin</title>
+<title>A guide to the Custom Login lite plugin</title>
 
 <link rel="stylesheet" href="readme.css" type="text/css" media="screen" />
 
 </head>
 <body>
 
-<h1>A guide to Custom Login</h1>
+<h1>A guide to Custom Login lite</h1>
 
 <p><em>Custom Login</em> was written to take care of the defualt WordPress login page.</p>
 
@@ -33,7 +33,11 @@
 <p>More to come soon..</p>
 <h2>Plugin support</h2>
 
-<p>As of right now, there is no support. But I freaquent the WordPress forums. So please post any questions there.</p>
+<p>As of right now, there is no support. But I freaquent the WordPress <a href="http://wordpress.org/tags/custom-login?forum_id=10">forums</a>. So please post any questions there.</p>
+
+<h2>Upgrades</h2>
+
+<p>I've got a Pro version of Custom Login which you can purchase over at <a href="http://thefrosty.com/custom-login-pro/">thefrosty.com</a>.</p>
 
 <h2>Copyright &amp; license</h2>
 
@@ -41,7 +45,7 @@
 
 <p>This plugin is copyrighted to <a href="http://austinpassy.com" title="Austin Passy">Austin Passy</a> of <a href="http://frostywebdesigns.com" title="Austin Passy">Frosty Web Designs</a>.</p>
 
-<p>2008&thinsp;&ndash;&thinsp;2010 &copy; Austin Passy.  All rights reserved.</p>
+<p>2008&thinsp;&ndash;&thinsp;2012 &copy; Austin Passy.  All rights reserved.</p>
 
 </body>
 </html>
